Satte opp node som http-server

--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
   <link rel="stylesheet" href="css/main.css">
   <script src="js/app.bekk.beacon.js"></script>
   <script src="js/processing.min.js"></script>
+  <script src="js/data.js"></script>
 </head>
 <body>
 
-<canvas data-processing-sources="bekk.beacon.pde"></canvas>
+<canvas id="heatmap" data-processing-sources="bekk.beacon.pde"></canvas>
 
 </body>
 </html>
